--- a/views/index.haml
+++ b/views/index.haml
@@ -3,7 +3,7 @@
 
 %script{src: "https://www.google.com/recaptcha/api.js"}
 
-%form{name: "application", method: "GET", action: "/apply", target: "_blank"}
+%form{name: "application", method: "POST", action: "/apply", target: "_blank"}
   %p
     %label{for: "name"} Name
     %br
@@ -11,7 +11,7 @@
   %p
     %label{for: "email"} Email
     %br
-    %input#email{type: "email", required: true}
+    %input#email{name: "email", type: "email", required: true}
   %p
     %label{for: "github-profile-url"} GitHub Profile URL:
     %br
